# brainco_hand_ros2

./: .gitignore  README.md  README_CN.md  brainco_hand.repos  build.sh
brainco_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  README_CN.md  package.xml
brainco_gazebo/config/: dual_revo2_controllers.yaml  dual_revo2_gazebo_description.urdf.xacro  revo2_gazebo_description.urdf.xacro  revo2_left_controllers.yaml  revo2_right_controllers.yaml
brainco_gazebo/launch/: dual_revo2_hand_gazebo.launch.py  dual_revo2_hand_gazebo_moveit.launch.py  revo2_hand_gazebo.launch.py  revo2_hand_gazebo_moveit.launch.py
brainco_gazebo/rviz/: dual_revo2_hand.rviz  revo2_left_hand.rviz  revo2_right_hand.rviz
brainco_gazebo/worlds/: empty_world.sdf
brainco_hardware/brainco_hand_driver/: AUTO_DETECT_GUIDE.md  AUTO_DETECT_USB_PORTS.md  CHANGELOG.rst  CMakeLists.txt  DUAL_HAND_TROUBLESHOOTING.md  README.md  README_CN.md  brainco_hand_driver_plugins.xml  package.xml
brainco_hardware/brainco_hand_driver/config/: dual_revo2.ros2_control.xacro  dual_revo2.urdf.xacro  dual_revo2_initial_positions.yaml  dual_revo2_joint_limits.yaml  dual_revo2_moveit_controllers.yaml  moveit.rviz  protocol_canfd_left.yaml  protocol_canfd_right.yaml  protocol_modbus.yaml  protocol_modbus_left.yaml  protocol_modbus_right.yaml  revo2_left.ros2_control.xacro  revo2_left.srdf  revo2_left.urdf.xacro  revo2_left_controllers.yaml  revo2_left_initial_positions.yaml  revo2_right.ros2_control.xacro  revo2_right.srdf  revo2_right.urdf.xacro  revo2_right_controllers.yaml  revo2_right_initial_positions.yaml  revo2_right_joint_limits.yaml  revo2_right_moveit_controllers.yaml
brainco_hardware/brainco_hand_driver/include/brainco_hand_driver/: brainco_hand_api.hpp  brainco_hand_hardware.hpp  canfd_session.hpp  logger_macros.hpp  modbus_session.hpp  sdk_helpers.hpp  transport_session_base.hpp
brainco_hardware/brainco_hand_driver/launch/: dual_revo2_real_moveit.launch.py  dual_revo2_system.launch.py  revo2_real_moveit.launch.py  revo2_system.launch.py
brainco_hardware/brainco_hand_driver/scripts/: download_sdk.sh
brainco_hardware/brainco_hand_driver/src/: brainco_hand_api.cpp  brainco_hand_hardware.cpp  canfd_session.cpp  modbus_session.cpp  sdk_helpers.cpp  transport_session_base.cpp
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  README_CN.md  package.xml  revo2_plugins.xml
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/config/: revo2_left.ros2_control.xacro  revo2_left.urdf.xacro  revo2_left_initial_positions.yaml  revo2_left_kinematics.yaml  revo2_right.ros2_control.xacro  revo2_right.urdf.xacro  revo2_right_initial_positions.yaml
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/include/revo2_ethercat_plugins/: execute_command.hpp  revo2_joints_system_slave.hpp
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/launch/: revo2_real_moveit.launch.py  revo2_system.launch.py
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/scripts/: test_revo2_ethercat.py
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/src/: revo2_joints_system_slave.cpp
brainco_hardware/stark_ethercat/stark_ethercat_driver/src/: stark_ethercat_driver.cpp
brainco_hardware/stark_ethercat/stark_ethercat_interface/: CMakeLists.txt
brainco_hardware/stark_ethercat/stark_ethercat_interface/include/stark_ethercat_interface/: ec_master.hpp  ec_sdo_manager.hpp
brainco_hardware/stark_ethercat/stark_ethercat_interface/src/: ec_master.cpp
brainco_moveit_config/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  README_CN.md  package.xml
brainco_moveit_config/config/: dual_revo2.ros2_control.xacro  dual_revo2.srdf  dual_revo2.urdf.xacro  dual_revo2_controllers.yaml  dual_revo2_initial_positions.yaml  dual_revo2_kinematics.yaml  moveit.rviz  revo2_left.ros2_control.xacro  revo2_left.srdf  revo2_left.urdf.xacro  revo2_left_initial_positions.yaml  revo2_left_joint_limits.yaml  revo2_left_moveit_controllers.yaml  revo2_right.ros2_control.xacro  revo2_right.srdf  revo2_right.urdf.xacro  revo2_right_initial_positions.yaml  revo2_right_kinematics.yaml
brainco_moveit_config/launch/: dual_revo2_moveit.launch.py  dual_revo2_real_moveit.launch.py  revo2_ethercat_real_moveit.launch.py  revo2_left_moveit.launch.py  revo2_real_moveit.launch.py  revo2_right_moveit.launch.py
revo2_with_rm65_demo/gazebo_rm_65_6f_with_revo2_demo/: CHANGELOG.rst  CMakeLists.txt  README.md  README_CN.md  package.xml
revo2_with_rm65_demo/gazebo_rm_65_6f_with_revo2_demo/config/: gazebo_65_6f_revo2_description_gz.urdf.xacro  revo2_controllers.yaml
revo2_with_rm65_demo/gazebo_rm_65_6f_with_revo2_demo/launch/: gazebo_rm65_with_revo2_moveit.launch.py  gazebo_rm_65_6f_with_revo2.launch.py
revo2_with_rm65_demo/gazebo_rm_65_6f_with_revo2_demo/rviz/: rm_65_revo2.rviz
revo2_with_rm65_demo/gazebo_rm_65_6f_with_revo2_demo/urdf/: rm_65_gazebo.urdf.xacro  rm_65_with_revo2_right.xacro
revo2_with_rm65_demo/rm65_with_revo2_right_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  README_CN.md  package.xml
revo2_with_rm65_demo/rm65_with_revo2_right_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  rm_65_revo2_right.ros2_control.xacro  rm_65_revo2_right.srdf  rm_65_revo2_right.urdf.xacro  ros2_controllers.yaml
revo2_with_rm65_demo/rm65_with_revo2_right_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rm65_with_revo2_right_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
