<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brainco_hand_ethercat_driver</name>
  <version>1.0.0</version>
  <description>
     EtherCAT hardware interface driver for BrainCo Revo2 dexterous hands.
     Provides ros2_control hardware interface for real-time EtherCAT communication
     with Revo2 hand hardware. Supports both left and right hand configurations.
  </description>
  <maintainer email="taoguang.dai@brainco.cn">daitg</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://www.brainco-hz.com/docs/revolimb-hand/</url>
  <url type="repository">https://github.com/BrainCoTech/brainco_hand_ros2</url>
  <url type="bugtracker">https://github.com/BrainCoTech/brainco_hand_ros2/issues</url>
  <author email="taoguang.dai@brainco.cn">daitg</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>stark_ethercat_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  
  <exec_depend>tf2_ros</exec_depend>
  
  <exec_depend>revo2_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
